Fix double scrollbar bug on Chrome

--- a/src/assets/scss/_reset.scss
+++ b/src/assets/scss/_reset.scss
@@ -12,7 +12,7 @@
 }
 
 html {
-	overflow-y: scroll;
+	// overflow-y: scroll;
 	// Prevent text resize after orientation change on iOS
 	-mos-text-size-adjust: 100%;
 	-ms-text-size-adjust: 100%;
